fix in index.html fav icons remplazed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
         <!-- Titulo -->
         <span class="first"> 
-            <span id="salir-btn" class="fa fa-sign-out-alt out oculto animated fadeIn"></span>
+            <span id="salir-btn" class="out oculto animated fadeIn">SALIR</span>
             <span id="titulo">
                 <i class="fa fa-user"></i>
                 Seleccione Personaje</span>
@@ -36,7 +36,7 @@
 
             <span class="first"> 
                 <span id="titulo-modal">Nuevo mensaje</span>
-                <span id="cancel-btn" class="fa fa-times"></span>
+                <span id="cancel-btn">CANCEL</span>
             </span>
             
 
@@ -48,15 +48,15 @@
             <!-- boton de enviar -->
 
             <div id="post-btn" class="fab">
-                <i class="fa fa-paper-plane"></i>
+                <i>ENVIAR</i>
             </div>
 
             <div id="post-btn" class="fab-marker">
-                <i class="fa fa-map-marker-alt"></i>
+                <i>MAPA</i>
             </div>
 
             <div id="post-btn" class="fab-photo">
-                <i class="fa fa-image"></i>
+                <i>FOTO</i>
             </div>
 
         </div>
